fix: width alignments

--- a/src/pages/AddQuestionPage/AddQuestionPage.css
+++ b/src/pages/AddQuestionPage/AddQuestionPage.css
@@ -128,7 +128,7 @@
 }
 
 .add-question-textarea > textarea {
-    width: 75vw;
+    width: 80vw;
 }
 
 
